# cloud-native-iterleaving

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
.agent/rules/: initial-project-plan.md  tech-guide.md
docs/: architecture.md  detailed_design.md  implementation_plan.md  index.md  integration_guide.md  risks_and_mitigation.md
src/: config.py  context.py
src/interleaving/: api.py  bucketer.py  method.py
src/observability/: logging.py
src/ranker/: adapter.py  base.py
tests/: sample_handler.py  test_config.py
tests/interleaving/: test_api.py  test_bucketer.py  test_method.py
tests/ranker/: test_adapter.py
